<resources>
    <string name="app_name">pil</string>
    <string name="entrar">ENTRAR</string>
    <string name="programa_de_incentivo_a_leitura">Programa de incentivo a leitura</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="sair">SAIR</string>
    <string name="melhor_avaliados">Melhor avaliados</string>
    <string name="hero_image_description">Descrição do herói</string>
    <string name="conta">Conta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="dialog_biometric_start">Deseja ativar a biometria</string>
    <string name="dialog_biometric_negative">Não</string>
    <string name="dialog_biometric_positive">Sim</string>

    <string-array name="filter_options">
        <item>Crescrente</item>
        <item>Decrescrente</item>
        <item>Mais lidos</item>
        <item>Avaliados</item>
        <item>Nº páginas</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>